fix: 修复Docker镜像源访问权限问题
主要修改：
- 移除需要认证的阿里云镜像源，改用公开可访问的官方Docker Hub镜像
- 优化npm配置，增加超时设置提高网络稳定性
- 创建备用Dockerfile.mirror使用网易云镜像源作为fallback
- 添加智能构建脚本build.sh，自动尝试多种镜像源
- 保持所有性能优化功能（缓存、多阶段构建等）
- 解决'pull access denied'错误，提升构建成功率

--- a/Dockerfile.mirror
+++ b/Dockerfile.mirror
@@ -1,9 +1,12 @@
-# 使用公开可访问的Node.js基础镜像
-FROM node:18.12.0-alpine3.16 AS web-builder
+# 备用Dockerfile - 使用网易云镜像源
+# 如果官方镜像拉取失败，可以使用这个版本
+
+# 使用网易云镜像的Node.js基础镜像
+FROM hub-mirror.c.163.com/library/node:18.12.0-alpine AS web-builder
 
 WORKDIR /opt/vue-fastapi-admin/web
 
-# 配置npm使用国内镜像源并设置超时
+# 配置npm使用国内镜像源
 RUN npm config set registry https://registry.npmmirror.com && \
     npm config set timeout 60000 && \
     npm config set network-timeout 60000
@@ -16,8 +19,8 @@ RUN npm install
 COPY web/ ./
 RUN npm run build
 
-# 使用公开可访问的Python基础镜像
-FROM python:3.11-slim-bullseye
+# 使用网易云镜像的Python基础镜像
+FROM hub-mirror.c.163.com/library/python:3.11-slim
 
 WORKDIR /opt/vue-fastapi-admin
 
