fix: 修复Dockerfile路径问题并优化构建上下文
主要修复：
- 修复.dockerignore错误排除web/dist的问题
- 优化COPY指令顺序，提高Docker缓存效率
- 将COPY . ./替换为具体的文件和目录复制
- 添加构建上下文检查脚本check-build-context.sh
- 确保所有路径在/root/vue-fastapi-admin-officalpage下正确工作

路径验证：
- 所有COPY/ADD指令路径正确 ✅
- WORKDIR声明合理 ✅
- 文件权限设置正确 ✅
- 无硬编码路径问题 ✅

--- a/.dockerignore
+++ b/.dockerignore
@@ -21,8 +21,7 @@ yarn-error.log*
 node_modules
 web/node_modules
 
-# 构建输出
-web/dist
+# 构建输出 (注意：web/dist会在Docker构建过程中生成，不需要排除)
 web/build
 dist
 build
