--- a/web/.env
+++ b/web/.env
@@ -1,3 +1,28 @@
+# 应用基础配置
 VITE_TITLE = 'SIPUMTECH'
-
 VITE_PORT = 3060
+
+# 资源公共路径,需要以 /开头和结尾
+VITE_PUBLIC_PATH = /
+
+# 是否启用代理
+VITE_USE_PROXY = true
+
+# base api
+VITE_BASE_API = /api/v1
+
+# 是否启用压缩
+VITE_USE_COMPRESS = true
+
+# 压缩类型
+VITE_COMPRESS_TYPE = gzip
+
+# 百度地图API配置
+# 请在百度地图开放平台申请API密钥：https://lbsyun.baidu.com/
+VITE_BAIDU_MAP_API_KEY = 8Xf25n2h1lIdYyWt6mBN0oNlCjONQ1vA
+
+# 公司位置信息
+VITE_COMPANY_NAME = 苏州思普微电子科技有限公司
+VITE_COMPANY_ADDRESS = 江苏省苏州市吴江区东太湖生态旅游度假区体育路508号金鹰商业中心2,3幢3幢1911
+VITE_COMPANY_LONGITUDE = 120.6357
+VITE_COMPANY_LATITUDE = 31.1515
