--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,6 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
-    "echarts": "^5.6.0",
     "eslint": "^8.46.0",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.4",
@@ -30,7 +29,7 @@
     "typescript": "^5.1.6",
     "unocss": "^0.55.0",
     "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.16.5",
+    "unplugin-icons": "0.16.1",
     "unplugin-vue-components": "^0.25.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
