--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ db.sqlite3-wal
 .DS_Store
 ._.DS_Store
 资料/~$苏州思普微介绍_20250526.pptx
+资料/~$苏州思普微介绍_20250526.pptx
+资料/~$苏州思普微介绍_20250526.pptx
+web/dist20250816.zip
+资料/~$苏州思普微介绍_20250526.pptx
